--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
 
 <head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Catamaran:wght@700&family=Fascinate+Inline&display=swap"
+    rel="stylesheet">
+  <!-- favicon -->
   <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
@@ -9,20 +15,20 @@
   <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
+  <!-- metatags SEO -->
+  <meta name="description" content="Quiz Yourself with these easy, medium, or hard questions on a variety of topics!" />
+  <meta property="og:description"
+    content="Quiz Yourself with these easy, medium, or hard questions on a variety of topics!">
+  <meta property="og:title" content="Quiz Yourself: quiz questions in mere moments">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://bit.ly/2RXw9tw">
+  <meta property="og:url" content="https://quiz-dusky.vercel.app/">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image:alt" content="Quiz Yourself homepage">
 
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="TypeScript quiz app created using create-react-app" />
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Catamaran:wght@700&family=Fascinate+Inline&display=swap"
-    rel="stylesheet">
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Quiz Yourself</title>
 </head>
 
 <body>
   <div id="root"></div>
 </body>
-
-
-</html>
